--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="/favicon.ico" type="img/x-ico" />
-    <title>ECommerce</title>
+    <title>人事管理系统</title>
     <% htmlWebpackPlugin.files.css %>
 </head>
 <body>
